2006.05.16: David Nichols
	* local variable optimizations, reduced memory usage, drastically 
	  reduced the number of memory allocations
	* eliminated extraneous cals to pthread_setspecific

2006.05.14: David Nichols
	* updated call_function() and call_function_args() to accept a call
	  reference as the first argument as well as a string

2006.05.13: David Nichols
	* removed call stack tracing from non-debugging mode (performance and
	  memory usage improvement)
	* eliminated ProgramStack and ArgvStack objects with heap allocations
	  and replaced them by storing the info on each thread's stack 
	  (performance and memory usage improvement)

2006.05.10: David Nichols
	* implemented a workaround to per-thread signal masks bug on Darwin by
	  calling sigprocmask() after pthread_sigmask() only on Darwin
	* updated tibae module to serialize integers > 32bits as i8
	* implemented --list-warnings and --enable-warning command-line options

2006.05.09: David Nichols
	* re-implemented safe signal handling to use a dedicated thread that
	  blocks on the receipt of signals with qore handlers.  fixed fork()
	  handling.
	* reset default signal mask in new process after fork()

2006.05.08: David Nichols
	* fixed a bug in signal handling when the handler is removed from within
	  the handler

2006.05.07: David Nichols
	* fixed a bug where the parser was accepting exp =~ exp but crashing if
	  the second exp was not a string
	* implemented regular expressions case statements

2006.05.06: David Nichols
	* implemented binary versions of digest functions (return binary objects
	  instead of strings): MD2_bin(), MD4_bin(), MD5_bin(), SHA_bin(), 
	  SHA1_bin(), DSS_bin(), DSS1_bin(), MDC2_bin(), RIPE160_bin()

2006.04.26: David Nichols
	* made assignments such as 
	  my ($a, $b, $c) = (1, 2, 3)
	  finally legal...
	* added CallReference constant for call reference (return value of 
	  type() for call reference arguments)