@@ -27,10 +27,10 @@
 #include <qore/Qore.h>
 #include <qore/AbstractSmartLock.h>
 
-#include <list>
+#include <deque>
 #include <map>
 
-typedef std::list<AbstractSmartLock *> abstract_lock_list_t;
+typedef std::deque<AbstractSmartLock *> abstract_lock_list_t;
 
 typedef std::map<int, class VLock *> vlock_map_t;
 
@@ -38,7 +38,6 @@ typedef std::map<int, class VLock *> vlock_map_t;
 class VLock : protected abstract_lock_list_t
 {
    private:
-      // whenever a lock is about to block, deadlock detection must be synchronized with the global lock
       static LockedObject global_lock;
       AbstractSmartLock *waiting_on;
       int tid;
