@@ -25,10 +25,11 @@ The RMutex class will be removed in the next release of Qore
 *) major performance improvements
 stack traces are now generated on-demand when an exception occurs, instead of constantly allocating heap objects in each thread for each call.
 also argv stacks and program stacks are now stored per-thread with no allocations (or locking).
-also thread resource tracking is now done with a lock-free, per thread mechanism (the global lock has been removed)
+thread resource tracking is now done with a lock-free, per thread mechanism (the global lock has been removed)
+local variable usage was optimized, the number of memory allocations has been reduced by more than 2 orders of magnitude, also memory usage has improved
 
-note that this means the getAllThreadCallStacks() function does not return any useful value with non-debugging versions of qore.
-Call stacks are still maintained with debugging versions of qore so this function can be used to generate a live stack trace of all active threads at any time (useful for finding deadlocks, etc).
+note that the stack trace optimization means the getAllThreadCallStacks() function does not return any useful value with non-debugging versions of qore.
+Call stacks are still maintained with debugging versions of qore so this function can be used to generate a live stack trace of all active threads at any time (useful for finding deadlocks, etc).  The performance impact vs. the utility of maintaining constant stack traces led to the decision to include continuous thread stack tracking only in debugging versions of qore.
 
 *) "pgsql" module: PostgreSQL driver
 the new "pgsql" driver uses efficient binary communication with PostgreSQL servers for binding and retrieving values from queries.
